# laundrykita

laundry-backend/: .env.example  .gitignore  README.md  config.py  database.py  dependencies.py  exceptions.py  guards.py  main.py  models.py  populate.sh  pyproject.toml  schemas.py
laundry-backend/db/: init.sql
laundry-backend/routers/: analytics.py  auth.py  customers.py  edit_requests.py  orders.py  tracking.py
laundry-backend/services/: analytics_service.py  edit_request_service.py  order_service.py
laundry-backend/test/: test_api.sh  unit_test.sh
laundry-frontend/: README.md  nuxt.config.ts  package-lock.json  package.json
laundry-frontend/app/assets/css/: main.css
laundry-frontend/app/components/: ApprovalBadge.vue  StatusStepper.vue
laundry-frontend/app/composables/: useApi.ts  useFormat.ts
laundry-frontend/app/layouts/: blank.vue  default.vue
laundry-frontend/app/middleware/: auth.global.ts
laundry-frontend/app/pages/: index.vue  login.vue
laundry-frontend/app/pages/analytics/: index.vue
laundry-frontend/app/pages/customers/: [id].vue  index.vue
laundry-frontend/app/pages/edit-requests/: [id].vue  index.vue
laundry-frontend/app/pages/orders/: [id].vue  index.vue  new.vue
laundry-frontend/app/pages/track/: [code].vue  index.vue
laundry-frontend/app/stores/: auth.ts
laundry-frontend/app/types/: index.ts
